--- a/site/public/css/variables.css
+++ b/site/public/css/variables.css
@@ -35,24 +35,25 @@
   /* LENGTHS */
   --left-sidebar-width: 286px;
   --right-sidebar-width: 175px;
-  --hole-width: 16px;
   --paper-side-margins: 2rem;
   --music-box-height: 200px; /* the same for all music boxes */
   --music-box-distance-from-top-of-workspace: 120px;
   --playhead-distance-from-top-of-workspace: calc(var(--music-box-distance-from-top-of-workspace) + 44px);
   --tabs-border: 1px;
   --floating-action-button-diameter: 56px;
+  --note-line-starting-gap: 16px; /* the starting gap used for all box types and hole sizes */
+  --hole-width: 16px;
   /*
 
       52   (# of quarter note bars)
-    x 50px (per quarter note bar)
+    x 48px (per quarter note bar)
     ------
     2496px
       48px (space after the last bar, for the add-button preview)
     +  1px (to show the final bar)
     ------
     2545px = Total length of a black note line
-             (not including the starting gap... that's dynamic and added on later)
+             (not including the starting gap... it gets added in separately for the cases that need it)
   */
   --default-note-line-length: 2545px;
 
